icondir = $(datadir)/icons/Nuvola/scalable/devices
NULL = 
icon_DATA = \
        gnome-dev-dvd.svg \
        gnome-dev-symlink.svg \
        gnome-dev-cdrom-audio.svg \
        gnome-dev-harddisk.svg \
        gnome-dev-cdrom.svg \
        gnome-dev-network.svg \
	gnome-dev-floppy.svg \
	gnome-dev-zipdisk.svg \
        $(NULL)
EXTRA_DIST = $(icon_DATA)
