icondir = $(datadir)/icons/Nuvola/scalable/devices
NULL = 
icon_DATA = \
	gnome-dev-cdrom-audio.svg \
	gnome-dev-cdrom.svg \
	gnome-dev-cdwriter.svg \
        gnome-dev-dvd.svg \
	gnome-dev-floppy.svg \
	gnome-dev-harddisk.svg \
	gnome-dev-mouse.svg \
	gnome-dev-network.svg \
	gnome-dev-scanner.svg \
        gnome-dev-symlink.svg \
        gnome-dev-zipdisk.svg \
        $(NULL)
EXTRA_DIST = $(icon_DATA)
